Dec 20, 2021
  updated log4j to avoid zero day exploit

Jun 26, 2020
  entries with zero interactions count are no longer stored in the table

May 10, 2020
  updated jar dependencies

Dec 16, 2019
- improved summary email

Nov 15, 2019
- tuned up logging

Oct 3, 2019
- improved logging
  fixed processing for genes with 1000+ proteins

v. 1.0.6, Jan 28, 2019
- updated build.gradle

v. 1.0.5, Sep 20, 2018
- moved from subversion to github

v. 1.0.4, Jan 25, 2018
- updated to properly show nr of counts: inserted, updated and up-to-date

v. 1.0.3, Jun 28, 2017
- fixed runme.sh script, when run by cron

v. 1.0.2, Jun 28, 2017
- upgraded build scripts from JDK 7 to JDK 8
- optimized sql bottleneck to halve the pipeline running time

v. 1.0.1, Jan 31, 2017
- upgraded build scripts from ant to gradle
- minor code refactoring