@@ -13,7 +13,7 @@ apply plugin: 'application'
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 mainClassName = 'edu.mcw.rgd.pipelines.interactionCounts.Manager'
-String myAppName = 'InteractionCounts'
+String myAppName = 'interaction-counts-pipeline'
 
 project.archivesBaseName = myAppName
 
@@ -22,13 +22,13 @@ repositories {
 }
 
 dependencies {
-    compile 'org.apache.commons:commons-dbcp2:2.7.0'
-    compile 'commons-net:commons-net:3.6'
-    compile 'org.apache.logging.log4j:log4j-api:2.16.0'
-    compile 'org.apache.logging.log4j:log4j-core:2.16.0'
+    compile 'org.apache.commons:commons-dbcp2:2.8.0'
+    compile 'commons-net:commons-net:3.7'
+    compile 'org.apache.logging.log4j:log4j-api:2.17.0'
+    compile 'org.apache.logging.log4j:log4j-core:2.17.0'
     compile 'com.oracle.ojdbc:ojdbc8:19.3.0.0'
-    compile 'org.springframework:spring-beans:5.2.0.RELEASE'
-    compile 'org.springframework:spring-jdbc:5.2.0.RELEASE'
+    compile 'org.springframework:spring-beans:5.2.1.RELEASE'
+    compile 'org.springframework:spring-jdbc:5.2.1.RELEASE'
 
     compile fileTree(dir: 'lib', include: '*.jar')
 }
