@@ -1,3 +1,6 @@
+Jan 05, 2022
+  renamed to 'interaction-counts-pipeline' from 'InteractionCounts'
+
 Dec 20, 2021
   updated log4j to avoid zero day exploit
 
